[Web Animations] `DeclarativeAnimation` for CSS Animation is not always destroyed when class that applies `animation-name` is removed https://bugs.webkit.org/show_bug.cgi?id=206899

Patch by Antoine Quint <graouts@apple.com> on 2020-01-29
Reviewed by Devin Rousso.

In case after processing the new animation styles we don't have any CSSAnimation objects anymore, we should make sure we remove the entry
for this element from m_elementToCSSAnimationsCreatedByMarkupMap so as to release ownership of any prior animation.

* animation/AnimationTimeline.cpp:
(WebCore::AnimationTimeline::updateCSSAnimationsForElement):

Canonical link: https://commits.webkit.org/219965@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255371 268f45cc-cd09-0410-ab3c-d52691b4dbfc